# Hybrid-Quantum-Classical-Library

./: CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.md  macros.cmake  package.json  sfdx-project.json  third-party-programs.txt
config/: project-scratch-def.json
examples/: excited_states.cpp  excited_states_q2.cpp  ham.txt  qaoa_maxcut.cpp  qaoa_maxcut_ex2.cpp  qaoa_q1.cpp  qaoa_q2.cpp  tfd_q4_fullTempOptimization.cpp  tfd_q4_fullTempOptimization_dlib.cpp  tfd_q4_fullTempOptimization_sym_op.cpp  vqe_q1_sym_op.cpp  vqe_q2.cpp  vqe_q2_sym_op.cpp  vqe_q2_sym_op_file_read.cpp  vqe_q4_sym_op.cpp
force-app/main/default/lwc/: jsconfig.json
force-app/main/default/lwc/hello/: hello.html
force-app/test/default/classes/: DemoControllerTests.cls
src/: example.hpp  example_test.cpp  main_test.cpp
src/code/: TODO.txt
src/core/: CMakeLists.txt  PauliOp.cpp  PauliOp.hpp  PauliOp_Test.cpp  SymbolicOperator.cpp  SymbolicOperator.hpp  SymbolicOperatorUtils.cpp  SymbolicOperatorUtils.hpp  SymbolicOperatorUtils_Test.cpp  SymbolicOperator_Test.cpp  bosehubb_gray_d-4_Nx-002.ham
template-project-cpp-master/: .gitignore  .gitlab-ci.yml  .gitmodules  README.md
template-project-cpp-master/src/: CMakeLists.txt  example.cpp  example_test.cpp  main.cpp
tools/: code_coverage.sh  gcovr.cfg  package.sh
utests/: CMakeLists.txt
